Fix incorrect C<> escaping
Fixes #318

--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -63,14 +63,14 @@ C<{ }> form at compile-time:
     %hash<<foo $var>>;  # same as %hash{ <<foo $var>> }
 
 You may have noted above that we avoided having to quote C<Zoe> by using
-the C<=>> operator, but that same operator did not just put invisible
+the C<< => >> operator, but that same operator did not just put invisible
 quotes around C<Date.new(2015,  4,  5)>, and we were able to find the
 same element using C<$stats{ Date.new(2015, 4, 4) + 1 }>.  This is because
-C<=>> only puts invisible quotes around single words, and by "word" we
-mean an identifier/name.  The C<=>> operator is there to prevent us from
+C<< => >> only puts invisible quotes around single words, and by "word" we
+mean an identifier/name.  The C<< => >> operator is there to prevent us from
 accidentally calling functions or using constants with that name.
 
-Hash subscripts do not do the same thing as C<=>>.  The default C<Hash>
+Hash subscripts do not do the same thing as C<< => >>.  The default C<Hash>
 has been made to behave the way new users have come to expect
 from using other languages, and for general ease of use.  On a
 default C<Hash>, subscripts coerce keys into strings, as long as
@@ -84,7 +84,7 @@ collection to be sure whether the keys are strings or objects:
     ( pi => 1 ).perl.say             #-> :pi(1)
     my %h; %h{pi}  = 1; say %h.perl; #-> { "3.14159265358979" => 1 }
 
-While the invisible quotes around single names is built into C<=>>,
+While the invisible quotes around single names is built into C<< => >>,
 string conversion is not built into the curly braces: it is a behavior
 of the default C<Hash>.  Not all types of hashes or collections
 do so:
@@ -92,7 +92,7 @@ do so:
     my %h := MixHash.new;
     $h{pi} = 1; %h.perl.say;         #-> (3.14159265358979e0=>1).MixHash
 
-(Any name that C<=>> would convert to a string can also be used to build
+(Any name that C<< => >> would convert to a string can also be used to build
 a pair using "adverbial notation" and will appear that way when viewed
 through C<.perl>, which is why we see C<:pi(1)> above.)
 
@@ -792,7 +792,7 @@ to return non-container values directly.
 Expected to return a Bool indicating whether or not there is an element
 associated with C<$key>. This is what L<C<postcircumfix { }>
 |/routine/{ }#postcircumfix_{_}> calls when invoked like
-C<%foo<aa>:exists>.
+C<< %foo<aa>:exists >>.
 
 What "existence" of an element means, is up to your type.
 
@@ -812,7 +812,7 @@ silently doing the wrong thing.
 Expected to delete the element associated with C<$key>, and return the
 value it had. This is what L<C<postcircumfix { }>
 |/routine/{ }#postcircumfix_{_}> calls when invoked like
-C<%foo<aa>:delete>.
+C<< %foo<aa>:delete >>.
 
 What "deleting" an element means, is up to your type - though it should
 usually cause C<EXISTS-KEY> to become C<False> for that key.
@@ -833,13 +833,13 @@ $new> is used instead, and if you do, you should make sure it has the same
 effect.
 
 This is meant as an opt-in performance optimization, so that simple
-assignments C<%age<Claire> = 29> can operate without having to call
+assignments C<< %age<Claire> = 29 >> can operate without having to call
 C<AT-KEY> (which would have to create and return a potentially expensive
 container object).
 
 Note that implementing C<ASSIGN-KEY> does I<not> relieve you from making
 C<AT-KEY> an C<rw> method though, because less trivial
-assignments/modifications such as C<%age<Claire>++> will still use
+assignments/modifications such as C<< %age<Claire>++ >> will still use
 C<AT-KEY>.
 
 =head3 method BIND-KEY
