--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -74,8 +74,8 @@ likely grow with time).
     bool           (bool from C99)
     size_t         (size_t in C)
 
-Don't use Perl 6 native type like C<int> or C<num> they could lead you to
-unwanting boundary issue between 32 bits and 64 bits system.
+Don't use Perl 6 native type like C<int> or C<num>, as they could lead to
+unwanted boundary issue between 32 bits and 64 bits systems.
 
 Note that the lack of a C<returns> trait is used to indicate void return type.
 Do I<not> use the 'void' type anywhere except in the Pointer parameterization.
