Add formatting to XCompose section

--- a/Language/unicode_entry.pod
+++ b/Language/unicode_entry.pod
@@ -17,19 +17,21 @@ page|https://en.wikipedia.org/wiki/Unicode_input>.
 
 =head1 XCompose
 
-Xorg includes digraph support using a Compose key
-https://en.wikipedia.org/wiki/Compose_key#GNU.2FLinux .  
-The default of AltGr + Shift can be remapped to something easier such as
-Capslock. In GNOME2 2 and MATE this can be setup under
-Preferences → Keyboard → Layouts → Options → Position of Compose Key.  
-So, for example, to input »+« you could type CAPSLOCK > > + CAPSLOCK < <
+Xorg includes digraph support using a
+L<I<Compose key>|https://en.wikipedia.org/wiki/Compose_key#GNU.2FLinux> .  
+The default of C<AltGr + Shift> can be remapped to something easier such as
+C<Capslock>. In I<GNOME 2> and I<MATE> this can be setup under
+C<Preferences → Keyboard → Layouts → Options → Position of Compose Key>.  
+So, for example, to input C<»+«> you could type
+C<< CAPSLOCK > > + CAPSLOCK < < >>
 
-XCompose allows customising the digraph sequences using a .XCompose file and
-https://github.com/kragen/xcompose/blob/master/dotXCompose is an extremely
-complete one. In GNOME, XCompose was overridden and replaced with a
-hardcoded list, but it is possible to restore XCompose by setting
-GTK_IM_MODULE=xim in your environment. It might be necessary to install
-a xim bridge as well, such as uim-xim.
+I<XCompose> allows customising the digraph sequences using a C<.XCompose>
+file and
+L<https://github.com/kragen/xcompose/blob/master/dotXCompose> is an extremely
+complete one. In I<GNOME>, I<XCompose> was overridden and replaced with a
+hardcoded list, but it is possible to restore I<XCompose> by setting
+C<GTK_IM_MODULE=xim> in your environment. It might be necessary to install
+a xim bridge as well, such as C<uim-xim>.
 
 =head1 Editors and shells
 
