Fix typo (ilmari++)

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -74,7 +74,7 @@ likely grow with time).
     bool           (bool from C99)
     size_t         (size_t in C)
 
-Don't use Perl 6 native type like C<int> or C<num>, as they could lead to
+Don't use Perl 6 native types like C<int> or C<num>, as they could lead to
 unwanted boundary issue between 32 bits and 64 bits systems.
 
 Note that the lack of a C<returns> trait is used to indicate void return type.
