Add index flag for EXPORT

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -212,7 +212,7 @@ dynamically. For example:
     say log-of-zero;  #-> -Inf
     =end code
 
-=head3 EXPORT
+=head3 X<EXPORT>
 
 You can export arbitrary symbols with an C<EXPORT> sub. C<EXPORT>
 must return a L<Map>, where the keys are the symbol names and
