doc signature constraints

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -16,12 +16,12 @@ documentation in L<List>.
 
 =begin table
 
-    Sigil   Type constraint          Default type  Flattens  Assignment
-    =====   ===============          ============  ========  ==========
-    $       Mu (no type constraint)  Any           No        item
-    &       Callable                 Callable      No        item
-    @       Positional               Array         Yes       list
-    %       Associative              Hash          Yes       list
+    Sigil   Type constraint          	Default type  Flattens  Assignment
+    =====   ===============          	============  ========  ==========
+    $       Mu (no type constraint)  	Any           No        item
+    &       L<Callable|/type/Callable>  Callable      No        item
+    @       Positional               	Array         Yes       list
+    %       Associative              	Hash          Yes       list
 
 =end table
 
