--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -38,6 +38,16 @@ my $sig = B<:($a, $b)>;
 #          ^^^^^^^^ Standalone Signature object
 =end code
 
+Signature literals can be used to define the signature of a callback or a
+cloasure.
+
+	sub f(&c:(Int)){}
+	sub will-work(Int){}
+	sub won't-work(Str){}
+	f(&will-work);
+	f(&wont-work); # fails at runtime
+	f(-> Int { 'this works too' } );
+
 =head2 Parameter Separators
 
 A signature consists of zero or more I<L<parameters|Parameter>>, separated by comma.
