Add another way of entering unicode chars in Emacs

--- a/Language/unicode_entry.pod
+++ b/Language/unicode_entry.pod
@@ -60,18 +60,35 @@ characters|http://vim.wikia.com/wiki/Entering_special_characters>.
 =head2 Emacs
 
 In L<Emacs|http://www.gnu.org/software/emacs/>, unicode characters are
-entered by first entering the chord C<Ctrl-x 8 Enter> at which point the
-text C<Unicode (name or hex):> appears in the mode line.  One then enters
+entered by first entering the chord C<C-x 8 RET> at which point the
+text C<Unicode (name or hex):> appears in the minibuffer.  One then enters
 the unicode code point hexadecimal number followed by the enter key.  The
 unicode character will now appear in the document.  Thus, to enter the Greek
-letter λ (lambda), one uses the following key combination (whitespace has
-been added between the commands for clarity):
+letter λ (lambda), one uses the following key combination:
 
-    Ctrl-x 8 Enter 3bb Enter
+    C-x 8 RET 3bb RET
 
 Further information about unicode and its entry into Emacs can be found on
 the L<Unicode Encoding Emacs wiki
 page|http://www.emacswiki.org/emacs/UnicodeEncoding>.
+
+You can also use L<RFC 1345|https://tools.ietf.org/html/rfc1345> character
+mnemonics by typing:
+
+    C-x RET C-\ rfc1345 RET
+
+Or C<C-u C-\ rfc1345 RET>.
+
+To type special characters, type C<&> followed by a mnemonic.
+Emacs will show the possible characters in the echo area.
+For example, Greek letter λ (lambda) can be entered by typing:
+
+    &l*
+
+You can use C<C-\> to toggle L<input method|https://www.gnu.org/software/
+emacs/manual/html_node/emacs/Select-Input-Method.html>.
+
+L<List of unicode characters and their mnemonics|http://quae.nl/rfc1345.html>
 
 =head2 Unix shell
 
