Add 𝑒 , and document value also for π and τ

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -24,9 +24,11 @@ if it is different from C<6.c>.
 
   ≅        U+2245      =~=
 
-  π        U+03C0      pi
+  π        U+03C0      pi                  3.14159_26535_89793_238e0
 
-  τ        U+03C4      tau
+  τ        U+03C4      tau                 6.28318_53071_79586_476e0
+
+  𝑒        U+1D452     e                   2.71828_18284_59045_235e0
 
   ∞        U+221E      Inf
 
