doc binding to Nil and test against Nil

--- a/Type/Nil.pod
+++ b/Type/Nil.pod
@@ -45,6 +45,13 @@ assigning C<Nil> to a variable which has a default will restore that default.
     for $x,$y -> $val is rw { $val = $reset unless $val > 0 }
     $x.say;          #-> 42
 
+To make C<Nil> stick to a container use binding. To test against C<Nil> use
+C<===> and C<any>.
+
+    my @c := 1,Nil,2; 
+    dd @c;                  # (1, Nil, 2)
+    say so Nil === any(@c); # True
+
 =head1 Methods
 
 =head2 method gist
