--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -254,4 +254,30 @@ Note that such a initialization could also be written as
 
     my %inv .= push: %wc.invert.unique;
 
+=head1 Subscript Adverbs
+
+Some methods are implemented as adverbs on subscripts.
+
+=head2 C<:exists>
+
+The adverb C<:exists> returns C<Bool::True> if a key exists in the Hash. If more then one key is supplied it returns a C<List> of C<Bool>.
+
+	my %h = a => 1, b => 2;
+	say %h<a>;   # True
+	say %h<a b>; # (True True)
+
+=head C<:p>
+
+The adverb C<:p> returns a C<Pair> or a List of C<Pair> instead of just the value.
+
+	my %h = a => 1, b => 2;
+	say %h<a>;	 # a => 1
+	say %h<a b>; # (a => 1 b=> 2)
+
+The adverbs C<:v> and C<:k> return the key or value or a list their of.
+
+	my %h = a => 1, b => 2;	
+	say %h<a>:k;  # a
+	say %h<a b>:k # (a b)
+
 =end pod
