Add method info to trans
Added trans method declarations and changed typo. Also added new-lines for readability in source.

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -684,7 +684,15 @@ Example:
 
 =head2 method trans
 
-Replaces one or many substrings with one or many strings. Ranges are supported, both for keys and values. Regexes work as keys. When called with C<:complemet> anything but the matched value or range is replaced with a single value. With C<:delete> the matched characters are removed. Combining C<:complement> and C<:delete> will remove anything but the mached values. The adverb C<:squash> will reduce repeated matched characters to a single character. 
+    proto method trans(|) { $/ := nqp::getlexcaller('$/'); {*} }
+    multi method trans(Str:D: Pair:D \what, *%n) returns Str
+    multi method trans(Str:D: *@changes, :complement(:$c), :squash(:$s), :delete(:$d)) returns Str
+
+Replaces one or many substrings with one or many strings. Ranges are supported, both for keys and
+values. Regexes work as keys. When called with C<:complement> anything but the matched value or range
+is replaced with a single value. With C<:delete> the matched characters are removed.
+Combining C<:complement> and C<:delete> will remove anything but the mached values.
+The adverb C<:squash> will reduce repeated matched characters to a single character. 
 
 Example:
 
