fix headings in Hash

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -266,13 +266,15 @@ The adverb C<:exists> returns C<Bool::True> if a key exists in the Hash. If more
 	say %h<a>;   # True
 	say %h<a b>; # (True True)
 
-=head C<:p>
+=head2 C<:p>
 
 The adverb C<:p> returns a C<Pair> or a List of C<Pair> instead of just the value.
 
 	my %h = a => 1, b => 2;
 	say %h<a>;	 # a => 1
 	say %h<a b>; # (a => 1 b=> 2)
+
+=head2 C<:v> and C<:k>
 
 The adverbs C<:v> and C<:k> return the key or value or a list their of.
 
