--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -714,6 +714,19 @@ as the target type. So you can define coercions for your own types like so:
 Coercion types are supposed to work wherever types work, but Rakudo
 currently (2015.02) only implements them for subroutine parameters.
 
+=head1 C<sub MAIN>
+
+The sub with the special name C<MAIN> is executed after all relevant phaser
+and it's signature is the means by which command line arguments can be parsed.
+Multi methods are supported and a usage method is automatically generated and
+displayed if no command line arguments are provided.
+
+    sub MAIN ( Int :$length = 24, :file($data) = 'file.dat', Bool :$verbose ) {
+        say $length if $length.defined;
+        say $data   if $data.defined;
+        say 'Verbosity ', ($verbose ?? 'on' !! 'off');
+    }
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
