fix :exists example

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -263,8 +263,8 @@ Some methods are implemented as adverbs on subscripts.
 The adverb C<:exists> returns C<Bool::True> if a key exists in the Hash. If more then one key is supplied it returns a C<List> of C<Bool>.
 
 	my %h = a => 1, b => 2;
-	say %h<a>;   # True
-	say %h<a b>; # (True True)
+	say %h<a>:exists;   # True
+	say %h<a b>:exists; # (True True)
 
 =head2 C<:p>
 
