add :delete to Hash

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -266,6 +266,15 @@ The adverb C<:exists> returns C<Bool::True> if a key exists in the Hash. If more
 	say %h<a>:exists;   # True
 	say %h<a b>:exists; # (True True)
 
+=head2 C<:delete>
+
+Use C<:delete> to remove a C<Pair> from the C<Hash>.
+
+	my %h = a => 1; 
+	dd %h;         # Hash %h = {:a(1)}
+	%h<a>:delete; 
+	dd %h          # Hash %h = {}
+
 =head2 C<:p>
 
 The adverb C<:p> returns a C<Pair> or a List of C<Pair> instead of just the value.
