--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -273,22 +273,22 @@ Use C<:delete> to remove a C<Pair> from the C<Hash>.
 	my %h = a => 1; 
 	dd %h;         # Hash %h = {:a(1)}
 	%h<a>:delete; 
-	dd %h          # Hash %h = {}
+	dd %h;         # Hash %h = {}
 
 =head2 C<:p>
 
 The adverb C<:p> returns a C<Pair> or a List of C<Pair> instead of just the value.
 
 	my %h = a => 1, b => 2;
-	say %h<a>;	 # a => 1
-	say %h<a b>; # (a => 1 b=> 2)
+	say %h<a>:p;    # a => 1
+	say %h<a b>:p;  # (a => 1 b=> 2)
 
 =head2 C<:v> and C<:k>
 
 The adverbs C<:v> and C<:k> return the key or value or a list their of.
 
 	my %h = a => 1, b => 2;	
-	say %h<a>:k;  # a
-	say %h<a b>:k # (a b)
+	say %h<a>:k;   # a
+	say %h<a b>:k  # (a b)
 
 =end pod
