--- a/Type/Stash.pod
+++ b/Type/Stash.pod
@@ -6,10 +6,10 @@
 
     class Stash is Hash { }
 
-A C<Stash> is a hash that is used for symbol tables at the package scoped in
-Perl 6.
+A C<Stash> is a hash that is used for symbol tables at the package scoping level
+in Perl 6.
 
-To get a Stash, you can all the C<.WHO> pseudo method on a package (because it
+To get a Stash, you can call the C<.WHO> pseudo-method on a package (because it
 answers the question I<who lives here?>), or if you write the package name as
 a literal, append two colons:
 
@@ -29,10 +29,12 @@ functionality:
     say Boring::.keys.sort;         # &package_sub Nested
     say Boring::<Nested>;           # (Nested)
 
-As the example above shows, lexicals and methods are not included in a Stash,
-since they do not live in the package table. (Methods have a separate method
-table, and are accessible through method calls or C<.can> and C<.^methods>,
-and lexicals live in a separate lexical pad, which is only from inside the
-scope).
+As the example above shows only "our"-scoped things appear in the C<Stash>
+(nested classes are "our" by default, but can be excluded with "my".)  Lexicals
+and methods are not included in a Stash, since they do not live in the package
+table.  Lexicals live in a separate lexical pad, which is only visible from
+inside the scope.  Methods (in the case that the package is also a class) have
+a separate method table, and are accessible through introspection on the
+class itself, via C<.can> and C<.^methods>.
 
 =end pod
