Mention TeX input method for entering unicode characters in Emacs

--- a/Language/unicode_entry.pod
+++ b/Language/unicode_entry.pod
@@ -88,7 +88,18 @@ For example, Greek letter λ (lambda) can be entered by typing:
 You can use C<C-\> to toggle L<input method|https://www.gnu.org/software/
 emacs/manual/html_node/emacs/Select-Input-Method.html>.
 
-L<List of unicode characters and their mnemonics|http://quae.nl/rfc1345.html>
+Another L<input method|http://www.emacswiki.org/emacs/InputMethods>
+you can use to insert special characters is
+L<TeX|http://www.emacswiki.org/emacs/TeXInputMethod>.
+Select it by typing C<C-u C-\ TeX RET>. You can enter a special character
+by using a prefix such as C<\>. For example, to enter λ, type:
+
+    \lambda
+
+To view characters and sequences provided by an input method,
+run the C<describe-input-method> command:
+
+    C-h I TeX
 
 =head2 Unix shell
 
