Rework it a bit

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -9,6 +9,27 @@ any additional modules.  Please note that the Since column applies to the
 version of Perl the symbol was known to be available.  It is only mentioned
 if it is different from C<6.c>.
 
+=head1 Alphabetic Characters
+
+Please note that any codepoints that have the C<Ll> or C<Lu> property,
+can be used just like any other alphabetic character from the ASCII range,
+like "A" or "a".
+
+=head1 Numeric characters
+
+Any codepoint that has the L<Nd> property, can be used as a digit in any
+number, unless special cased in the list below.
+
+=head1 Numeric values
+
+Any codepoint that has the L<No> property, can be used as a numeric value,
+such as ½ and ⅓.
+
+=head1 Other acceptable codepoints
+
+This list contains the codepoints (and their Texas (ASCII) equivalents) that
+have a special meaning in Perl 6.
+
 =begin table
   symbol   codepoint   Texas       Since   Remarks
   ------   ---------   ---------   -----   ---------------------------------
@@ -17,8 +38,6 @@ if it is different from C<6.c>.
   »        U+00BB      >>                  as part of «» or .»
 
   ×        U+00D7      *
-
-  /        U+00DF      /
 
   ÷        U+00F7      /
 
@@ -122,9 +141,5 @@ if it is different from C<6.c>.
 
   ⊎        U+228E      (+)
 =end table
-
-Please note that any codepoints that have the C<Ll> or C<Lu> property,
-can be used just like any other alphabetic character.  Also, any codepoint
-that has the L<Nd> property, can be used as a digit in any number.
 
 =end pod
