Add some more lemma's

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -162,6 +162,12 @@ L<class|#Class>:
         has $.name;    # public attribute "name"
     }
 
+=head1 AST
+
+Acronym for
+L<B<A>bstract B<S>yntax B<T>ree|http://en.wikipedia.org/wiki/Abstract_syntax_tree>.
+Used in many places, including L<actions|#Actions>, L<#PAST>, and L<#QAST>.
+
 =head1 Autothreading
 
 Autothreading is what happens if you pass a L<Junction|#Junction> to
@@ -618,11 +624,25 @@ See L<#Attribute>.
 
 =head1 Method
 
+=head1 MoarVM
+
+A virtual machine designed specifically for L<#NQP> and its L<#MOP>:
+L<#6model>.  A document about
+L<the purpose of MoarVM|https://github.com/MoarVM/MoarVM/blob/master/docs/reveal.md>.
+MoarVM has some similarities with the Hotspot VM so you may peruse its
+L<glossary|http://openjdk.java.net/groups/hotspot/docs/HotSpotGlossary.html>
+for entries missing from the present one.
+
 =head1 Module
 
 =head1 Mu
 
 =head1 Multi-Dispatch
+
+=head1 Niecza
+
+An implementation of Perl 6 targeting the .NET platform.  No longer actively
+maintained.
 
 =head1 Not Quite Perl
 
@@ -651,6 +671,15 @@ you specify when calling a subroutine/method/callable block.
     sub foo($bar) { say $bar }     # $bar is a parameter
     foo(42);                       # 42 is an argument
 
+=head1 Parrot
+
+A L<virtual machine|#Virtual Machine> designed to run Perl 6 and other
+L<dynamic languages|#Dynamic Language>.  No longer actively maintained.
+
+=head1 PAST
+
+L<#Parrot> L<#AST>.
+
 =head1 perl
 
 Name of the Perl 5 executor.
@@ -674,6 +703,10 @@ See L<#Attribute>.
 
 A feature of L<https://gitub.com|Github> that allows you to make patches
 to be easily applied using the Github user interface.
+
+=head1 QAST
+
+Successor to L<#QAST>.
 
 =head1 Rakudo
 
@@ -807,6 +840,14 @@ languages:
     Invocant requires an instance, but a type object was passed
 
 =head1 Variable
+
+=head1 Virtual Machine
+
+A virtual machine is the Perl compiler entity that executes the
+L<bytecode|#Bytecode>.  It can optimize the bytecode or generate
+L<machine code|#Machine code> L<Just in Time|#JIT>.  Examples are
+L<#MoarVM>, L<#Parrot> (who are intended to run Perl 6) and more
+generic virtual machines such as L<#JVM> and L<#Javascript>.
 
 =head1 yoleaux
 
