--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -20,6 +20,11 @@ like "A" or "a".
 Any codepoint that has the L<Nd> property, can be used as a digit in any
 number, unless special cased in the list below.
 
+=head1 Whitespace characters
+
+Besides spaces and tabs you can use any other unicode whitespace character
+that has the L<Zs> property.
+
 =head1 Numeric values
 
 Any codepoint that has the L<No> property, can be used as a numeric value,
