Zl and Zp are also valid whitespace characters

--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -23,7 +23,7 @@ number, unless special cased in the list below.
 =head1 Whitespace characters
 
 Besides spaces and tabs you can use any other unicode whitespace character
-that has the L<Zs> property.
+that has the L<Zs>, L<Zl> or L<Zp> property.
 
 =head1 Numeric values
 
