--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -78,11 +78,11 @@ have a special meaning in Perl 6.
 
   ｣        U+FF63      Q//                 as part of ｢｣
 
-  ¯        U+00AF      **-                 as part of exponentiation
+  ¯        U+00AF      N/A                 as part of exponentiation
 
-  ⁺        U+207A      **+                 as part of exponentiation
+  ⁺        U+207A      N/A                 as part of exponentiation
 
-  ⁻        U+207B      **-                 as part of exponentiation
+  ⁻        U+207B      N/A                 as part of exponentiation
 
   ⁰        U+2070      **0                 can be combined with ⁰..⁹
 
