Add example of testing a fail()

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -290,7 +290,12 @@ as a type object, or as a string containing its type name.
 
 If an exception was thrown, it will also try to match the matcher hash, in
 which the key is the name of the method to be called on the exception, and
-the value is the value it should have to pass.
+the value is the value it should have to pass. For example:
+
+=begin code
+sub frodo { fail "Oops. Frodo dies" unless $destroys-ring };
+throws-like { frodo }, Exception, message => /dies/;
+=end code
 
 =comment Someone needs to clarify the preceding paragraph, because I have
          no idea what it is talking about... ;)
