better example for Cool::uniname (AlexDaniel++)

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -894,8 +894,13 @@ Defined as:
 
 Usage:
 
-    uniname STRING
-    STRING.uniname
+    # Camelia in Unicode
+    say '»ö«'.uniname; 
+    «RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK␤»
+
+    # Find the char with the longest Unicode name.
+    say (0..0x1FFFF).sort(*.uniname.chars)[*-2].chr.uniname;
+    # «ARABIC LIGATURE UIGHUR KIRGHIZ YEH WITH HAMZA ABOVE WITH ALEF MAKSURA INITIAL FORM␤»
 
 Interprets the invocant / first argument as a L</type/Str>, and returns the
 Unicode codepoint name of the first character.
