--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -895,15 +895,16 @@ Defined as:
 Usage:
 
     # Camelia in Unicode
-    say '»ö«'.uniname; 
-    «RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK␤»
+    say ‘»ö«’.comb».uniname;
+    # «("RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK",
+        "LATIN SMALL LETTER O WITH DIAERESIS", "LEFT-POINTING DOUBLE ANGLE QUOTATION MARK")␤»
 
     # Find the char with the longest Unicode name.
     say (0..0x1FFFF).sort(*.uniname.chars)[*-1].chr.uniname;
     # «ARABIC LIGATURE UIGHUR KIRGHIZ YEH WITH HAMZA ABOVE WITH ALEF MAKSURA INITIAL FORM␤»
 
 Interprets the invocant / first argument as a L</type/Str>, and returns the
-Unicode codepoint name of the first character.
+Unicode codepoint name of the first character. To convert a while string use L<uninames|#routine_uninames>.
 
 =head2 routine chop
 
