--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -73,6 +73,7 @@ what type they coerce to:
     chars           Str
     fmt             Str
     uniname         Str
+    uninames        Seq
     unival          Str
     univals         Str
     uniprop         Str
@@ -905,6 +906,22 @@ Usage:
 
 Interprets the invocant / first argument as a L</type/Str>, and returns the
 Unicode codepoint name of the first character. To convert a while string use L<uninames|#routine_uninames>.
+
+=head2 routine uninames
+
+Defined as:
+
+    sub uninames(Str:D)
+    method uninames()
+
+Usage:
+
+    dd ‘»ö«’.comb».uniname;
+    # «("RIGHT-POINTING DOUBLE ANGLE QUOTATION MARK",
+        "LATIN SMALL LETTER O WITH DIAERESIS",
+        "LEFT-POINTING DOUBLE ANGLE QUOTATION MARK").Seq␤»
+
+Returns of a Seq of unicode names for the Str provided.
 
 =head2 routine chop
 
