--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -905,7 +905,7 @@ Usage:
     # «ARABIC LIGATURE UIGHUR KIRGHIZ YEH WITH HAMZA ABOVE WITH ALEF MAKSURA INITIAL FORM␤»
 
 Interprets the invocant / first argument as a L</type/Str>, and returns the
-Unicode codepoint name of the first character. To convert a while string use L<uninames|#routine_uninames>.
+Unicode codepoint name of the first character. To convert a whole string use L<uninames|#routine_uninames>.
 
 =head2 routine uninames
 
