--- a/Language/unicode_texas.pod
+++ b/Language/unicode_texas.pod
@@ -17,17 +17,17 @@ like "A" or "a".
 
 =head1 Numeric characters
 
-Any codepoint that has the L<Nd> property, can be used as a digit in any
+Any codepoint that has the C<Nd> property, can be used as a digit in any
 number, unless special cased in the list below.
 
 =head1 Whitespace characters
 
 Besides spaces and tabs you can use any other unicode whitespace character
-that has the L<Zs>, L<Zl> or L<Zp> property.
+that has the C<Zs>, C<Zl> or C<Zp> property.
 
 =head1 Numeric values
 
-Any codepoint that has the L<No> property, can be used as a numeric value,
+Any codepoint that has the C<No> property, can be used as a numeric value,
 such as ½ and ⅓.
 
 =head1 Other acceptable codepoints
