add links to class Nil and class Failure (yurivish_++)

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -176,7 +176,7 @@ of the routine. Any return statement in that routine has to be argumentless.
 
 	sub foo(--> 123) { return }
 
-C<Nil> and C<Failure> are always allowed as return types, reguardless of any
+L<C<Nil>|/type/Nil> and L<C<Failure>|/type/Failure> are always allowed as return types, reguardless of any
 type contrain.
 
 	sub foo(--> Int) { Nil };
