Remove the reference to auto flattening based on sigils

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -10,18 +10,16 @@ I<identifier>.
 
 =head1 Sigils
 
-The sigil serves both as a rough type constraint and as an indicator as to
-whether the contents of the variable flatten in list context. See also the
-documentation in L<List>.
+The sigil serves as a variable indicator and type constraint.
 
 =begin table
 
-    Sigil   Type constraint          	Default type  Flattens  Assignment
-    =====   ===============          	============  ========  ==========
-    $       Mu (no type constraint)  	Any           No        item
-    &       L<Callable|/type/Callable>  Callable      No        item
-    @       Positional               	Array         Yes       list
-    %       Associative              	Hash          Yes       list
+    Sigil   Type constraint          	Default type  Assignment Examples
+    =====   ===============          	============  ========== ========
+    $       Mu (no type constraint)  	Any           item       Int, Str, Array, Hash
+    @       Positional               	Array         list       List, Array, Range, Buf
+    %       Associative              	Hash          list       Hash, Map, Pair
+    &       Callable                  Callable      item       Sub, Method, Block, Routine
 
 =end table
 
@@ -139,15 +137,16 @@ only depends on the C<$>.
 
     Twigil  Scope
     ======  =====
-     *      dynamic
-     !      attribute (class member)
-     ?      compile-time variable
-     .      method (not really a variable)
-     <      index into match object (not really a variable)
-     ^      self-declared formal positional parameter
-     :      self-declared formal named parameter
+     none   Based only on declarator
+     *      Dynamic
+     !      Attribute (class member)
+     ?      Compile-time variable
+     .      Method (not really a variable)
+     <      Index into match object (not really a variable)
+     ^      Self-declared formal positional parameter
+     :      Self-declared formal named parameter
      =      Pod variables
-     ~      the sublanguage seen by the parser at this lexical spot
+     ~      The sublanguage seen by the parser at this lexical spot
 
 =end table
 
