--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -422,14 +422,25 @@ match.
 Anchors need to match successfully in order for the whole regex to match but
 they do not use up characters while matching.
 
-=head2 X«C<^>, Start of String|regex,^»
+=head2 X«C<^>, Start of String and C<$>, End of String|regex,^;regex,$» 
 
-The C<^> assertion only matches at the start of the string.
+The C<^> assertion only matches at the start of the string:
 
-    say so 'properly' ~~ /perl/;        # True
+    say so 'properly' ~~ /  perl/;      # True
     say so 'properly' ~~ /^ perl/;      # False
     say so 'perly'    ~~ /^ perl/;      # True
     say so 'perl'     ~~ /^ perl/;      # True
+
+The C<$> assertion only matches at the end of the string:
+
+    say so 'use perl' ~~ /  perl  /;    # True
+    say so 'use perl' ~~ /  perl $/;    # True
+    say so 'perly'    ~~ /  perl $/;    # False
+
+You can, of course, combine both anchors:
+
+    say so 'use perl' ~~ /^ perl $/;    # False
+    say so 'perl'     ~~ /^ perl $/;    # True
 
 =head2 X«C<^^>, Start of Line and C<$$>, End of Line|regex,^^;regex,$$»
 
