Explicilty mention ^ and $ anchor to string and not line. mspo++

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -442,6 +442,18 @@ You can, of course, combine both anchors:
     say so 'use perl' ~~ /^ perl $/;    # False
     say so 'perl'     ~~ /^ perl $/;    # True
 
+Keep in mind, these anchors match end of B<string>, not line:
+
+    my $str = q:to/EOS/;
+       Keep it secret
+       and keep it safe
+       EOS
+
+    say so $s ~~ /safe   $/;   # True
+    say so $s ~~ /secret $/;   # False
+    say so $s ~~ /^Keep   /;   # True
+    say so $s ~~ /^and    /;   # False
+
 =head2 X«C<^^>, Start of Line and C<$$>, End of Line|regex,^^;regex,$$»
 
 The C<^^> assertion matches at the start of a logical line. That is, either
