--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -510,6 +510,10 @@ Real Soon Now
 Request Tracker (L<http://rt.perl.org/>).  The place where all the bugs
 related to L<#Rakudo> live.
 
+=head2 Thnunk
+
+A piece of code that isn't immediately executed, but doesn't have an independent scope.
+
 =head2 TIMTOWTDI
 
 An alternative form of L<#TMTOWTDI>, explicitly including the "is" from
