EXPORT can take arguments

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -283,6 +283,23 @@ passing C<:DEFAULT> to C<use> along with your positional parameters.
     shy();         #FAIL - won't be imported
     =end code
 
+C<EXPORT> can take arguments, given it was provided with a signature. Type
+captures are supported.
+
+    # lib/MyModule.pm
+
+    sub EXPORT(Int $i = 42) {
+        {
+            'foo' => sub () { $i }
+        }
+    }
+
+    # main.pl
+    
+    use MyModule 666;
+
+    foo(); # 666
+
 =head1 Distributing Modules
 
 If you've written a Perl 6 module and would like to share it with the
