--- a/Language/containers.pod
+++ b/Language/containers.pod
@@ -123,7 +123,7 @@ changes the contents of the other.
 You've seen this situation before: it is exactly what happened with the
 signature parameter marked as C<is rw>.
 
-Sigilless variabes also bind by default and so do parameters with the trait C<is raw>.
+Sigilless variables also bind by default and so do parameters with the trait C<is raw>.
 
     my $a = 42;
     my \b = $a;
