C<...> to C<<...>> for example containing single <

--- a/Language/5to6-perlsyn.pod
+++ b/Language/5to6-perlsyn.pod
@@ -33,7 +33,7 @@ Perl 6 is still I<largely> free form. However, there are a few instances
 where the presence or lack of whitespace is now significant. For
 instance, in Perl 5, you can omit a space following a keyword (e. g.
 C<<while($x < 5)>> or C<my($x, $y)>). In Perl 6, that space is required,
-thus C<while ($x < 5)> or C<my ($x, $y)>. In Perl 6, however, you can
+thus C<<while ($x < 5)>> or C<my ($x, $y)>. In Perl 6, however, you can
 omit the parentheses altogether: C<< while $x < 5 >>. This holds for
 C<if>, C<for>, etc.
 
