Suggest automated testing through Travis-CI

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -420,6 +420,8 @@ To share your module, do the following:
     local repo to know about your GitHub repo.
 
     =item Push your project to GitHub.
+    
+    =item Consider to setup automated testing (see L<https://docs.travis-ci.com/user/languages/perl6>).
 
     =item Create a PR on L<ecosystem|https://github.com/perl6/ecosystem> adding
     your module to META.list, or Ping someone on IRC (#perl6 at freenode) to
